Use site name instead of jekyll theme name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Eventually
+title: glom
 email: wrqw (at) tuta (dot) io
 description: A digital scratch pad for your brain
 baseurl: "" # the subpath of your site, e.g. /blog
